<package format="2">
  <name>BeckhoffADSROS</name>
  <version>1.0.0</version>
  <description>
  Original Beckhoff ADS found here: github.com/Beckhoff/ADS
  </description>
  <maintainer email="noemailfound@gmail.com">Dshieff</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
</package>
